Prevent a NOTIMPLEMENTED block from being reached.

When a Cocoa app is built with a 10.11+ SDK, and is run on macOS 10.11+,
gesture{Begin,End} events are no longer sent for scrollWheel: gestures. In order
to reduce the number of logic paths in RenderWidgetHostViewCocoa, we sent the
scrollWheel: begin/end events to gesture{Begin,End} handlers. This means that we
need to update the WebGestureEventBuilder to handle scroll wheel events.

Bug: 768266
Change-Id: I39b5eea400894687b35aa8ce8dbbbde33a426817
Reviewed-on: https://chromium-review.googlesource.com/751681
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513585}
Former-commit-id: f253afd7b5d79b5b738b158302d4f2ce561adf02